# ICHIS_THEME_APP

./: ALTERACOES_GF_HOME_R4.txt  MANIFEST.in  README.md  hooks.py  modules.txt  pyproject.toml  requirements.txt  setup.py
gf_ui_overlay/doctype/gf_ui_overlay_settings/: gf_ui_overlay_settings.py
ichis/: __init__.py  hooks.py  install.py  modules.txt  package.json  patches.txt
ichis/ichis/public/js/: gf_aura_loader.js
ichis/ichis_theme_app/: __init__.py
ichis/ichis_theme_app/page/gf_home/: gf_home.js  gf_home.json  gf_home.py
ichis/public/: ichis_gf_home.bundle.js
ichis/public/css/: gf_aura_desk_safe.css  gf_aura_tokens.css  gf_home.css  gf_home_force.css  gf_home_overlay.css  gf_theme.css
ichis/public/js/: gf_aura_loader.js  gf_global.js  gf_home.js  gf_home_boot.js  gf_home_force.js
ichis_theme_app/: hooks.py  install.py
ichis_theme_app/api/: theme.py
ichis_theme_app/gf_theme_control/doctype/gf_theme_settings/: gf_theme_settings.json  gf_theme_settings.py
ichis_theme_app/gf_ui_overlay/doctype/gf_ui_overlay_card/: gf_ui_overlay_card.json  gf_ui_overlay_card.py
ichis_theme_app/gf_ui_overlay/doctype/gf_ui_overlay_page/: gf_ui_overlay_page.json  gf_ui_overlay_page.py
ichis_theme_app/gf_ui_overlay/doctype/gf_ui_overlay_settings/: gf_ui_overlay_settings.json
ichis_theme_app/gf_ui_overlay/page/gf_modern_desk/: gf_modern_desk.html  (+2 more)
ichis_theme_app/public/css/: gf_overlay.css  gf_theme.css
ichis_theme_app/public/js/: gf_overlay.js  gf_overlay_v2.js  gf_theme.js  gf_theme_v3.js
ichis_theme_control/: hooks.py  install.py  modules.txt  patches.txt
ichis_theme_control/api/: theme.py
ichis_theme_control/doctype/gf_theme_settings/: gf_theme_settings.json
ichis_theme_control/public/js/: gf_theme_control.js
public/css/: gf_theme.css
public/js/: gf_global.js  gf_overlay.js
(+1 files in other folders)
