[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ichis"
version = "0.0.1"
description = "Tema visual genérico inspirado no Aura para Frappe/ERPNext v16"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "GREENFARMS", email = "contato@greenfarms.com.br" }
]
dependencies = []

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["ichis", "ichis.*"]
