[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ichis_theme_control"
version = "1.0.0"
description = "Central administrativa de identidade visual do ERPNext - GREENFARMS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "GREENFARMS", email = "contato@greenfarms.com.br" }
]
dependencies = []

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["ichis_theme_control", "ichis_theme_control.*"]
