[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ichis_theme_app"
version = "1.0.0"
description = "GREENFARMS — Central de Identidade Visual e UI Overlay para ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GREENFARMS", email = "contato@greenfarms.com.br" }]
dependencies = []

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["ichis_theme_app", "ichis_theme_app.*"]
